2011-04-24 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>
	* src/labyrinth.py
	* src/MainWindow.py:
	Add text domain to action group

2011-04-24 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>
	* src/MMapArea.py:
	Fix double-clicking on thought

2011-04-24 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>
	* src/Links.py
	* src/MMapArea.py:
	Fix issue 124 and fix regression that links could not be deleted

2011-04-24 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>
	* po/pt_BR.po:
	Really set to UTF-8
	* configure.ac:
	Prepare release candidate

2011-04-24 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>
	* data/labyrinth-ui.xml
	* src/MainWindow.py:
	Removing 'delete from menu which interfered with application key
	binding

2011-04-23 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>

	* src/MainWindow.py
	* src/MMapArea.py
	* data/labyrinth-ui.xml:
	Add Zoom-to-Fit functionality fixing issue 150

2011-04-23 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>

	* src/MainWindow.py
	* data/labyrinth-ui.xml:
	Temporarily disable ResourceThoughts for an earlier release of 0.5

2011-04-23 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>

	* src/TextThought.py:
	Fix issue 136 with patch provided by Dennis Guse

2011-04-23 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>

	* configure.ac:
	Fix issue 143 with patch provided by CaptainM...

2011-04-23 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>

	* src/Makefile.in:
	Add ResourceThought

2011-04-23 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>

	* src/MapList.py:
	Fix issue 148 with Patch from "perlhead"

2011-04-23 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>

	* src/*.py:
	Respect PEP-8.

2011-04-23 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>

	* src/MainWindow.py
	* src/utils.py:
	Replace deprecated libs

2009-03-08 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>

	* data/labyrinth.glade
	Fix Gtk warning
